# rproj

./: README.md
mantis-tests/data/: example.csv
mantis-tests/rtests/: rmantis.sl  runtest.R  runtest.out
mantis-tests/tests/: check_mantis_bench.out  check_mantis_bench.py  check_python.out  check_python.py
mantismod/: README.md  pyproject.toml
mantismod/src/mantis/: __init__.py  inference.py  utils.py
mantismod/src/mantismod/: __init__.py  model.py
rmantis/: DESCRIPTION  NAMESPACE
rmantis/R/: forecast.R  forecast.R.old  utils.R
rmantis/tests/: testthat.R
rmantis/tests/testthat/: helper.R  test-forecast.R  test-utils.R  test-weights.R
rmantismod/: DESCRIPTION  NAMESPACE
rmantismod/R/: cudacheck.R  forecast.R  rmantismod-package.R  utils.R  weights.R
rmantismod/man/: mantis_check_python.Rd  mantis_cudacheck.Rd  mantis_download_weights.Rd  mantis_forecast.Rd  mantis_setup_python.Rd  rmantismod-package.Rd
